[package]
name = "lib-sim-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
gloo-utils = "0.2.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
lib-evolution = { path = "../evolution-sim" }

